--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<iframe id="beycoin.xyz" src="https://beycoin.xyz/bits-ads.php?type=0&&ids=266" scrolling="no" style="width:468px; height:60px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+	<iframe id="beycoin.xyz" src="https://beycoin.xyz/bits-ads.php?type=1&&ids=266" scrolling="no" style="width:728px; height:90px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+	<iframe id="beycoin.xyz" src="https://beycoin.xyz/bits-ads.php?type=2&&ids=266" scrolling="no" style="width:160px; height:600px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+	<iframe id="beycoin.xyz" src="https://beycoin.xyz/bits-ads.php?type=3&&ids=266" scrolling="no" style="width:300px; height:250px; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
 <div id="layout">
 	<p>Cryptoslam.io data reveals a 23.39% drop in NFT sales this week compared to the earlier week. Along with this downturn, there was a notable 96.48% decrease in NFT buyers and a 15.26% slide in the number of NFT sales. ETH-based NFT sales led the pack with 66.73% of total sales, reaching $130.77 million last week.</p>
 	<p>Despite their dominance, ETH NFT sales saw a 14.77% dip compared to the previous week. Among 22 networks, Bitcoin (BTC) ranked second in terms of sales, recording $23.37 million last week and experiencing a 34.99% slump week-over-week. Ethereum and Bitcoin were followed by Solana, BNB, and Polygon in weekly sales.</p>
