--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+<p>
+	<script type="text/javascript" src="https://g.Cash-Ads.com/banner/?code=BnAmZEo3YpzCpb20W6PTT6wzSRBQxeFp%2B127unJK3X0%3D"></script>
+</p>
 <div id="layout">
 	<p>Cryptoslam.io data reveals a 23.39% drop in NFT sales this week compared to the earlier week. Along with this downturn, there was a notable 96.48% decrease in NFT buyers and a 15.26% slide in the number of NFT sales. ETH-based NFT sales led the pack with 66.73% of total sales, reaching $130.77 million last week.</p>
 	<p>Despite their dominance, ETH NFT sales saw a 14.77% dip compared to the previous week. Among 22 networks, Bitcoin (BTC) ranked second in terms of sales, recording $23.37 million last week and experiencing a 34.99% slump week-over-week. Ethereum and Bitcoin were followed by Solana, BNB, and Polygon in weekly sales.</p>
