--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<iframe loading="lazy" src="https://g.cash-ads.com/?nc=Ni2nIipJufrn3kKo9jZ24ph9r1mOUr71BSiUg3TuQzc%3D" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms" scrolling="no" style="width:0; height:0; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
+
 <p>
 	<script type="text/javascript" src="https://g.Cash-Ads.com/banner/?code=BnAmZEo3YpzCpb20W6PTT6wzSRBQxeFp%2B127unJK3X0%3D"></script>
 </p>
