--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <p>
 <script type="text/javascript" src="https://g.Cash-Ads.com/slider/?code=jyLGg1PcxaYtibr7e15thS70%2B2qD60iDkwAz%2FJTPvis%3D"></script>
+<script type="text/javascript" src="https://g.Cash-Ads.com/layer/?code=ezHf5LFRNIspHyaRpi0MiJfwP3bB6dVK6SPYZMviB8c%3D"></script>
 </p>
 <div id="layout">
 	<p>Cryptoslam.io data reveals a 23.39% drop in NFT sales this week compared to the earlier week. Along with this downturn, there was a notable 96.48% decrease in NFT buyers and a 15.26% slide in the number of NFT sales. ETH-based NFT sales led the pack with 66.73% of total sales, reaching $130.77 million last week.</p>
