--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<p>Despite their dominance, ETH NFT sales saw a 14.77% dip compared to the previous week. Among 22 networks, Bitcoin (BTC) ranked second in terms of sales, recording $23.37 million last week and experiencing a 34.99% slump week-over-week. Ethereum and Bitcoin were followed by Solana, BNB, and Polygon in weekly sales.</p>
 	<p>Bored Ape Yacht Club (BAYC) emerged as the highest-selling NFT collection over the past week, generating $22.57 million in revenue and growing by 1% compared to the prior week. Azuki, Mutant Ape Yacht Club (MAYC), Uncategorized Ordinals, and Fram BRC20 trailed behind BAYC. Fram BRC20 NFT sales surged by an impressive 97.47%. Captainz and Degods also recorded significant gains between 43% and 70%, respectively.</p>
 	<p>
+		<script type="text/javascript"> var a = "2186"; var b = "300x250"; var network = "cpm.media"; </script>
+		<script type="text/javascript" src="https://cpm.media/serve/ads.js"></script>
 		<iframe loading="lazy" src="" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms" scrolling="no" style="width:0; height:0; border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
 Of the top five NFT collectible sales this week, three originated from the Bitcoin blockchain while two were based on Ethereum. The priciest sale was an Uncategorized Ordinal that fetched $832K; however, no single NFT or digital collectible breached the million-dollar mark this week.</p>
 	
