--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,16 +7,48 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-	<p>
-	</p>
 <div id="layout">
-	<p>Cryptoslam.io data reveals a 23.39% drop in NFT sales this week compared to the earlier week. Along with this downturn, there was a notable 96.48% decrease in NFT buyers and a 15.26% slide in the number of NFT sales. ETH-based NFT sales led the pack with 66.73% of total sales, reaching $130.77 million last week.</p>
-	<p>Despite their dominance, ETH NFT sales saw a 14.77% dip compared to the previous week. Among 22 networks, Bitcoin (BTC) ranked second in terms of sales, recording $23.37 million last week and experiencing a 34.99% slump week-over-week. Ethereum and Bitcoin were followed by Solana, BNB, and Polygon in weekly sales.</p>
-	<p>Bored Ape Yacht Club (BAYC) emerged as the highest-selling NFT collection over the past week, generating $22.57 million in revenue and growing by 1% compared to the prior week. Azuki, Mutant Ape Yacht Club (MAYC), Uncategorized Ordinals, and Fram BRC20 trailed behind BAYC. Fram BRC20 NFT sales surged by an impressive 97.47%. Captainz and Degods also recorded significant gains between 43% and 70%, respectively.</p>
-	<p>
-Of the top five NFT collectible sales this week, three originated from the Bitcoin blockchain while two were based on Ethereum. The priciest sale was an Uncategorized Ordinal that fetched $832K; however, no single NFT or digital collectible breached the million-dollar mark this week.</p>
-	
+	<div id="header">
+		<div id="logo"></div>
+		<div id="menu">
+			<div class="menu-item"><a href="">Home</a></div>
+		</div>
+	</div>
+	<div id="nav">
+		<div class="category">
+			<div class="item"><a href="#">BTC</a></div>
+			<div class="item"><a href="#">ETH</a></div>
+			<div class="item"><a href="#">XMR</a></div>
+		</div>
+	</div>
+	<div id="content">
+		<div class="comic">
+			<a href="bitcoin-hovers-round.html"><h1>Bitcoin Hovers Around $20,000 as Hawkish Fed Weighs on Crypto</h1></a>
+			<div>August 30, 2022</div>
+			<div>Bitcoin traded in a narrow band around $20,000, with investors less willing to take big risks after Federal Reserve Chair Jerome Powell reiterated the central bank’s commitment to keep raising rates in the fight against inflation.</div>
+		</div>
+		<div class="comic">
+			<a href="binance-ceo-sees-no-threat-to-crypto-from-central-bank-digital-currencies-says-cbdcs-will-validate-blockchain-concept.html"><h1>Binance CEO Sees No Threat to Crypto From Central Bank Digital Currencies — Says CBDCs Will Validate Blockchain Concept</h1></a>
+			<div>August 30, 2022</div>
+			<div>The CEO of cryptocurrency exchange Binance does not see central bank digital currencies (CBDCs) as a threat to cryptocurrencies, like bitcoin and ether. “It will validate the blockchain concept so that anybody who still has concerns about the technology will say: ‘Ok, our government is using the technology now,'” he opined.
+			</div>
+		</div>
+		<div class="comic">
+			<a href="report-south-korean-prosecutors-accuse-do-kwon-of-manipulating-lunas-market-price.html"><h1>Report: South Korean Prosecutors Accuse Do Kwon of Manipulating LUNA's Market Price</h1></a>
+			<div>August 30, 2022</div>
+			<div>On Thursday, Nov. 3, 2022, local reports from South Korea disclosed that Korean prosecutors have allegedly discovered evidence that shows Do Kwon and an associate manipulated the price of LUNA, Terra’s native crypto token. The report further says South Korean prosecutors believe Kwon is hiding out in Europe.
+			</div>
+		</div>
+		<div class="comic">
+			<a href="bitcoins-rising-correlation-with-gold-indicates-investors-see-it-as-a-safe-haven-says-bank-of-america-market-strategists.html"><h1>Bitcoin’s Rising Correlation With Gold Indicates Investors See It as a Safe-Haven, Say Bank of America Market Strategists</h1></a>
+			<div>August 30, 2022</div>
+			<div>Amid the economic uncertainty affecting a myriad of countries worldwide, Bank of America Securities market strategists explained in a note this week that the leading crypto asset bitcoin has been correlated with the well known precious metal gold. Bank of America analysts Alkesh Shah and Andrew Moss noted “that investors may view bitcoin as a relative safe haven as macro uncertainty continues.”
+			</div>
+		</div>
+		
+	</div>
+	<div id="footer">
+	</div>
 </div>
 </body>
 </html>
