--- a/propush.html
+++ b/propush.html
@@ -1,1 +1,19 @@
-https://uncrobator.com/4/6274718?var=a1
+<!DOCTYPE html>
+<html>
+<head>
+    <script>
+                function message() {
+                  var a = document.getElementById("demo");
+                  a.click();
+                }
+                setTimeout(message,5);
+   </script>
+</head>
+<body>
+    <a id="demo" href="https://uncrobator.com/4/6274718?var=a1">https://uncrobator.com/4/6274718?var=a1</a>
+</body>
+</html>
+
+
+
+
